k8s-app/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-app
  labels:
    name: k8s-app
    app.kubernetes.io/name: k8s-app
    app.kubernetes.io/part-of: k8s-app
